k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: konqer
  labels:
    name: konqer
    environment: production
    project: konqer
